--- a/src/components/ItemListContainer/ItemListContainer.css
+++ b/src/components/ItemListContainer/ItemListContainer.css
@@ -1,7 +1,44 @@
 .titulo {
     font-size: 35px;
-    margin-top: 20px;
-    padding: 20px; 
+    margin: 35px 0;
+    padding: 10px; 
     color: black;
     text-transform: uppercase;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.productos-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content:space-around;
+    margin: auto;
+    padding: 10px;
+    background-color: black;
+    border-radius: 15px;
+    max-width: 1200px;
+    
+  }
+  
+.card {
+    width: 300px;
+    margin-bottom: 20px;
+}
+
+.img {
+    width: 250px;
+    height: 200px;
+    margin: 7px 10px;
+    background-color: white;
+}
+
+.button {
+    border-radius: 30px;
+    width: 80%;
+    background: #000;
+    margin: 5px auto;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    white-space: nowrap;
 }
