Terminando las modificaciones para la 2da preentrega, itemDetails, routes, etc

--- a/src/components/ItemDetailContainer/ItemDetail.css
+++ b/src/components/ItemDetailContainer/ItemDetail.css
@@ -1,8 +1,18 @@
 .item-container {
    display: grid;
    grid-template-columns: 1fr 1fr;
-   width: 600px;
-   margin: auto;
+   width: 800px;
+   margin: 25px auto;
    padding: 50px;
 }
+
+.img {
+   width: 300px;
+}
+
+.volver{
+   width: 50%;
+}
+
+
 
