Pequeños cambios en los estilos

--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -12,11 +12,13 @@
 
 .title{
     font-size: 20px;
+    font-weight: 600;
 }
 
 .linkConect {
     margin-right: 7px;
     font-size: 30px;
+    color: #000;
 }
 
 .footer_img{
