--- a/src/components/ItemDetailContainer/ItemDetail.css
+++ b/src/components/ItemDetailContainer/ItemDetail.css
@@ -19,7 +19,34 @@
    font-size: 35px;
    font-weight: bold;
    color: black;
+   background-color: #ececec;
+   border-radius: 20px;
 }
 
+.volver:hover {
+   color: #ececec;
+   background-color: #000;
+}
+
+.contenedor-info{
+   display: flex;
+   flex-direction: column;
+   gap: 5px;
+   margin: auto;
+}
+
+.count {
+   display: flex;
+}
+
+.contador {
+   width: 50px;
+   border-radius: 30px;
+}
+
+.cantidad {
+   font-size: 19px;
+   margin: auto 5px;
+}
 
 
