--- a/src/components/ItemDetailContainer/ItemDetail.css
+++ b/src/components/ItemDetailContainer/ItemDetail.css
@@ -10,8 +10,9 @@
    margin-top: 55px;
 }
 
-.img {
+.imagen {
    width: 300px;
+   height: 250px;
    margin: auto;
 }
 
@@ -42,6 +43,7 @@
 .contador {
    width: 50px;
    border-radius: 30px;
+   border: .5px solid #000;
 }
 
 .cantidad {
