--- a/src/components/ItemListContainer/ItemListContainer.css
+++ b/src/components/ItemListContainer/ItemListContainer.css
@@ -23,7 +23,8 @@
 .card {
     width: 250px;
     margin-bottom: 20px;
-    border: none;
+    border-radius: 25px;
+    
 }
 
 .card-title  {
@@ -31,10 +32,9 @@
 }
 
 .img {
-    width: 150px;
+    width: 200px;
     height: 200px;
     margin: 7px 10px;
-    background-color: white;
 }
 
 .button {
@@ -50,7 +50,7 @@
 
 .button2 {
     color: #000;
-    width: 35%;
+    width: 45%;
     background: #8b8080;
     margin: 5px auto;
     text-overflow: ellipsis;
